--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,5 +5,14 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  }, 
+  "ConnectionStrings" : {
+    "Shop" :"server=localhost; Database=ShoppingMall; User Id=sa; Password=0000",
+    "Identity" : "Server=localhost; Database=OnlineMallIdentity; User Id=sa; Password=0000"
+  },
+  "Authentication" : {
+    "SecretKey" : "1QAZ@wsx3ED1QAZ@wsx3EDC$rfv!@#$QWERASDFzxcvC$rfv!@#$QWERASDFzxcv",
+    "Issuer": "Jett",
+    "Audience" : "Jett"
   }
 }
