--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "bootstrap": "^4.6.0",
     "chart.js": "^3.3.2",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-financial": "github:santam85/chartjs-chart-financial#with-dist",
@@ -25,9 +26,11 @@
     "chartjs-plugin-datalabels": "^2.0.0-rc",
     "core-js": "^3.11.0",
     "date-fns": "^2.21.1",
+    "font-awesome": "^4.7.0",
     "highlight.js": "^10.7.2",
     "lodash-es": "^4.17.21",
     "ng2-charts": "^3.0.0-rc.2",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-highlightjs": "^4.1.3",
     "ngx-markdown": "^12.0.0",
     "prismjs": "^1.23.0",
