--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.0.1",
     "chart.js": "^3.3.2",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-chart-financial": "github:santam85/chartjs-chart-financial#with-dist",
@@ -33,8 +34,10 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-highlightjs": "^4.1.3",
     "ngx-markdown": "^12.0.0",
+    "ngx-spinner": "^12.0.0",
     "prismjs": "^1.23.0",
     "rxjs": "^6.6.7",
+    "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
