--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -25,6 +25,7 @@
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
+    "strictDomEventTypes": false,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
