--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,7 +8,9 @@
   }, 
   "ConnectionStrings" : {
     "Shop" :"server=localhost; Database=ShoppingMall; User Id=sa; Password=0000",
-    "Identity" : "Server=localhost; Database=OnlineMallIdentity; User Id=sa; Password=0000"
+    "Identity" : "Server=localhost; Database=ShoppingMallIdentity; User Id=sa; Password=0000",
+    "Redis": "redis://54801018@192.168.238.130"
+    
   },
   "Authentication" : {
     "SecretKey" : "1QAZ@wsx3ED1QAZ@wsx3EDC$rfv!@#$QWERASDFzxcvC$rfv!@#$QWERASDFzxcv",
