--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "ngx-spinner": "^12.0.0",
     "prismjs": "^1.23.0",
     "rxjs": "^6.6.7",
+    "uuid": "^8.3.2",
     "xng-breadcrumb": "^6.7.0",
     "zone.js": "~0.11.4"
   },
@@ -52,6 +53,7 @@
     "@types/lodash-es": "^4.17.4",
     "@types/luxon": "^1.26.5",
     "@types/node": "^14.14.45",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "4.24.0",
     "@typescript-eslint/parser": "4.24.0",
     "cypress": "^6.9.1",
