--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,19 +2,19 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }, 
   "ConnectionStrings" : {
     "Shop" :"server=127.0.0.1; Database=ShoppingMall; User Id=SA; Password=MyPass@word",
     "Identity" : "Server=127.0.0.1; Database=ShoppingMallIdentity; User Id=SA; Password=MyPass@word",
-    "Redis": "redis://54801018@192.168.238.130"
+    "Redis": "localhost"
     
   },
   "Authentication" : {
     "SecretKey" : "1QAZ@wsx3ED1QAZ@wsx3EDC$rfv!@#$QWERASDFzxcvC$rfv!@#$QWERASDFzxcv",
-    "Issuer": "Jett",
-    "Audience" : "Jett"
+    "Issuer": "https://jet175.com",
+    "Audience" : "https://jet175.com"
   }
 }
